:sparkles: make product executable on JDK17 host